tests/neg-custom-args/deprecation/old-syntax.scala

val f = (x: Int) ⇒ x + 1  // error

val list = for (n ← List(42)) yield n + 1  // error
